--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 * {
     background: transparent;
-    color: #cdd6f4;
+    color: #bfbfbf;
     border: none;
     border-radius: 0;
     font-family: "CaskaydiaMono Nerd Font";
@@ -13,7 +13,7 @@
 
 #waybar {
     background: transparent;
-    color: #cdd6f4;
+    color: #bfbfbf;
 }
 
 /* ▓▓▓▓▓▓▓ LEFT MODULES ▓▓▓▓▓▓▓ */
@@ -21,36 +21,25 @@
     background: transparent;
     padding: 0 8px;
 }
-
-#workspaces {
-    background: transparent;
-    margin-left: -2px;
-    min-width: 9px;
-}
-
 #workspaces button {
     all: initial;
-    background: transparent;
-    color: #cdd6f4;
-    border: 1.5px solid transparent;
-    padding: 0px 6px;
-    margin: 0 2px;
-    font-size: 10px;
-
-    /*border-radius: 3px;*/
+    padding: 0 6px;
+    margin: 0 1.5px;
+    min-width: 9px;
+    border: 1px solid transparent;
+    border-radius: 3px;
     transition: all 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
-
 #workspaces button:hover {
-    border-color: #cdd6f4;
-    color: #cdd6f4;
+    /*border-color: #bfbfbf;*/
+    color: #bfbfbf;
 }
 
 #workspaces button.active {
-    border: 1.5px solid #cdd6f4;
+    border: 1px solid #bfbfbf;
     padding: 0 12px;
     min-width: 10px;
-    color: #cdd6f4;
+    color: #bfbfbf;
 }
 
 #workspaces button.occupied:not(.active) {
@@ -91,114 +80,114 @@
 }
 #bluetooth {
     background: transparent;
-    color: #cdd6f4;
-    border: 1px solid #cdd6f4;
+    color: #bfbfbf;
+    border: 1px solid #bfbfbf;
     padding: 1px 6px;
     margin: 2px 1px;
     font-size: 10px;
 }
 #pulseaudio {
     background: transparent;
-    color: #cdd6f4;
-    border: 1px solid #cdd6f4;
+    color: #bfbfbf;
+    border: 1px solid #bfbfbf;
     padding: 1px 6px;
-    margin: 2px 1px;
+    margin: 2px 2px;
     font-size: 10px;
 }
 
 #memory {
     background: transparent;
-    color: #cdd6f4;
-    border: 1px solid #cdd6f4;
+    color: #bfbfbf;
+    border: 1px solid #bfbfbf;
     padding: 1px 6px;
-    margin: 2px 1px;
+    margin: 2px 2px;
     font-size: 10px;
 }
 #cpu {
     background: transparent;
-    color: #cdd6f4;
-    border: 1px solid #cdd6f4;
+    color: #bfbfbf;
+    border: 1px solid #bfbfbf;
+    border-left: none;
     padding: 1px 6px;
-    margin: 2px 1px;
+    margin: 2px 0px;
     font-size: 10px;
 }
 #temperature {
     background: transparent;
-    color: #cdd6f4;
-    border: 1px solid #cdd6f4;
+    color: #bfbfbf;
+    border: 1px solid #bfbfbf;
     padding: 1px 6px;
-    margin: 2px 1px;
+    margin: 2px 2px;
     font-size: 10px;
 }
 
 #battery {
     background: transparent;
-    color: #cdd6f4;
-    border: 1px solid #cdd6f4;
+    color: #bfbfbf;
+    border: 1px solid #bfbfbf;
     padding: 1px 6px;
-    margin: 2px -0px;
+    margin: 2px 0px;
     font-size: 10px;
 }
-/*#power-profiles-daemon {
+#power-profiles-daemon {
     background: transparent;
-    color: #cdd6f4;
-    border: 1px solid #cdd6f4;
+    color: #bfbfbf;
+    border: 1px solid #bfbfbf;
+    border-right: none;
+
     padding: 1px 6px;
-    margin: 2px 1px;
-    font-size: 10px;
-}*/
+    margin: 2px 0px;
+    font-size: 13.5px;
+}
 #network {
     /*background: #1e1e2e;*/
     background: transparent;
-    color: #cdd6f4;
-    border: 1px solid #cdd6f4;
+    color: #bfbfbf;
+    border: 1px solid #bfbfbf;
     padding: 1px 6px;
-    margin: 2px 1px;
+    margin: 2px 0px;
     font-size: 10px;
 }
 
 /* ▓▓▓▓▓▓▓ TOOLTIPS ▓▓▓▓▓▓▓ */
-/*tooltip {
-    ackground: #1e1e2e;
-    background: transparent;
-    border: 2px solid #89b4fa;
+tooltip {
+    background: #1a1a1a;
+    border: 0.5px solid #bfbfbf;
     border-radius: 0;
-    color: #cdd6f4;
-    font-family: "Monaco", "Menlo", "DejaVu Sans Mono", monospace;
-    font-size: 11px;
-    padding: 4px 8px;
-}*/
+    color: #bfbfbf;
+    font-family: "CaskaydiaMono Nerd Font";
+}
 
 /*▓▓▓▓▓▓▓ Extras ▓▓▓▓▓▓▓*/
 #clock {
     /*background: #1e1e2e;*/
     background: transparent;
-    border: 1px solid #cdd6f4;
+    border: 1px solid #bfbfbf;
     border-left: none;
-    font-family: "Monaco", "Menlo", "DejaVu Sans Mono", monospace;
+    font-family: "CaskaydiaMono Nerd Font";
     font-size: 11px;
     padding: 1px 6px;
     margin: 2px 0px 2px 0;
-    color: #cdd6f4;
+    color: #bfbfbf;
 }
 #custom-analog-clock {
     /*background: #1e1e2e;*/
     background: transparent;
-    border: 1px solid #cdd6f4;
+    border: 1px solid #bfbfbf;
     border-right: none;
     font-family: "SimpleAnalogClockFont";
     font-size: 14px;
     font-weight: bolder;
     padding: 2px 4px 1px 4px;
-    margin: 2px -2px 2px 4px;
-    color: #cdd6f4;
+    margin: 2px -1px 2px 3px;
+    color: #bfbfbf;
 }
 
 #tray {
     margin-right: 16px;
 }
 #custom-expand-icon {
-    margin-right: 10px;
+    margin-right: 9px;
 }
 #custom-update {
     font-size: 13px;
@@ -215,7 +204,7 @@
 }
 
 #custom-screenrecording-indicator.active {
-    color: #cdd6f4;
+    color: #bfbfbf;
     animation-name: blink-recording;
     animation-duration: 0.7s;
 }
@@ -232,7 +221,7 @@
 }
 
 #custom-voxtype.recording {
-    color: #cdd6f4;
+    color: #bfbfbf;
 }
 
 /* ▓▓▓▓▓▓▓ EMPTY WINDOW STATE ▓▓▓▓▓▓▓ */
