--- a/style.css
+++ b/style.css
@@ -36,22 +36,25 @@
 }
 
 #workspaces button.active {
+    opacity: 1;
     border: 1px solid #bfbfbf;
     padding: 0 12px;
     min-width: 10px;
     color: #bfbfbf;
+    background: transparent;
 }
 
 #workspaces button.occupied:not(.active) {
-    border-color: #6c7086;
+    opacity: 0.7;
+
     background: #1e1e2e;
-    opacity: 0.5;
     color: #a6adc8;
+    border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 #workspaces button.empty {
     opacity: 0.6;
-    border-color: transparent;
+    background: transparent;
     color: #a6adc8;
 }
 #custom-omarchy {
