--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 }
 #workspaces button {
     all: initial;
-    padding: 0 6px;
+    padding: 0 3px;
     margin: 0 1.5px;
     min-width: 9px;
     border: 1px solid transparent;
@@ -38,7 +38,7 @@
 #workspaces button.active {
     opacity: 1;
     border: 1px solid #bfbfbf;
-    padding: 0 12px;
+    padding: 0 0px;
     min-width: 10px;
     color: #bfbfbf;
     background: transparent;
@@ -50,6 +50,11 @@
     background: #1e1e2e;
     color: #a6adc8;
     border: 1px solid rgba(0, 0, 0, 0.3);
+}
+#workspaces button:hover {
+    border: 1px solid #737373;
+    box-shadow: 0 0 4px rgba(85, 85, 85, 0.3);
+    background: rgba(0, 0, 0, 0.2);
 }
 
 #workspaces button.empty {
@@ -182,7 +187,7 @@ tooltip {
     font-size: 14px;
     font-weight: bolder;
     padding: 1px 3px 1px 4px;
-    margin: 2px -1px 2px 3px;
+    margin: 2px -2px 2px 3px;
     color: #bfbfbf;
 }
 
