--- a/style.css
+++ b/style.css
@@ -23,33 +23,33 @@
 }
 #workspaces button {
     all: initial;
-    padding: 0 3px;
-    margin: 0 1.5px;
-    min-width: 9px;
+    padding: 0 4px;
+    margin: 0 2px;
     border: 1px solid transparent;
-    border-radius: 3px;
+    border-radius: 0px;
     transition: all 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
-#workspaces button:hover {
-    /*border-color: #bfbfbf;*/
+
+/*#workspaces button:hover {
+    border-color: #bfbfbf;
     color: #bfbfbf;
-}
+}*/
 
 #workspaces button.active {
     opacity: 1;
-    border: 1px solid #bfbfbf;
-    padding: 0 0px;
-    min-width: 10px;
+    /* uncomment to have border*/
+    /*border: 1px solid #bfbfbf;*/
+    padding: 0 6px;
     color: #bfbfbf;
     background: transparent;
 }
 
 #workspaces button.occupied:not(.active) {
-    opacity: 0.7;
+    opacity: 0;
 
     background: #1e1e2e;
     color: #a6adc8;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 0.5px solid rgba(0, 0, 0, 0.3);
 }
 #workspaces button:hover {
     border: 1px solid #737373;
@@ -58,7 +58,7 @@
 }
 
 #workspaces button.empty {
-    opacity: 0.6;
+    opacity: 1;
     background: transparent;
     color: #a6adc8;
 }
@@ -67,19 +67,19 @@
     font-size: 14;
 }
 /* ▓▓▓▓▓▓▓ CENTER MODULES ▓▓▓▓▓▓▓ */
-.modules-center {
+/*.modules-center {
     background: transparent;
     padding: 0 8px;
-}
+}*/
 
-#window {
+/*#window {
     background: #1e1e2e;
     color: #f9e2af;
     border: 1px solid #f9e2af;
     padding: 2px 12px;
     margin: 2px 4px;
     font-size: 11px;
-}
+}*/
 
 /* ▓▓▓▓▓▓▓ RIGHT MODULES ▓▓▓▓▓▓▓ */
 .modules-right {
@@ -89,7 +89,7 @@
 #bluetooth {
     background: transparent;
     color: #bfbfbf;
-    border: 1px solid #bfbfbf;
+    border: 0.5px solid #bfbfbf;
     padding: 1px 6px;
     margin: 2px 1px;
     font-size: 10px;
@@ -97,7 +97,7 @@
 #pulseaudio {
     background: transparent;
     color: #bfbfbf;
-    border: 1px solid #bfbfbf;
+    border: 0.5px solid #bfbfbf;
     padding: 1px 6px;
     margin: 2px 2px;
     font-size: 10px;
@@ -106,7 +106,7 @@
 #memory {
     background: transparent;
     color: #bfbfbf;
-    border: 1px solid #bfbfbf;
+    border: 0.5px solid #bfbfbf;
     padding: 1px 6px;
     margin: 2px 2px;
     font-size: 10px;
@@ -114,7 +114,7 @@
 #cpu {
     background: transparent;
     color: #bfbfbf;
-    border: 1px solid #bfbfbf;
+    border: 0.5px solid #bfbfbf;
     border-left: none;
     padding: 1px 6px;
     margin: 2px 0px;
@@ -123,7 +123,7 @@
 #temperature {
     background: transparent;
     color: #bfbfbf;
-    border: 1px solid #bfbfbf;
+    border: 0.5px solid #bfbfbf;
     padding: 1px 6px;
     margin: 2px 2px;
     font-size: 10px;
@@ -132,7 +132,7 @@
 #battery {
     background: transparent;
     color: #bfbfbf;
-    border: 1px solid #bfbfbf;
+    border: 0.5px solid #bfbfbf;
     padding: 1px 6px;
     margin: 2px 0px;
     font-size: 10px;
@@ -140,7 +140,7 @@
 #power-profiles-daemon {
     background: transparent;
     color: #bfbfbf;
-    border: 1px solid #bfbfbf;
+    border: 0.5px solid #bfbfbf;
     border-right: none;
 
     padding: 1px 6px;
@@ -151,7 +151,7 @@
     /*background: #1e1e2e;*/
     background: transparent;
     color: #bfbfbf;
-    border: 1px solid #bfbfbf;
+    border: 0.5px solid #bfbfbf;
     padding: 1px 6px;
     margin: 2px 0px;
     font-size: 10px;
@@ -170,7 +170,7 @@ tooltip {
 #clock {
     /*background: #1e1e2e;*/
     background: transparent;
-    border: 1px solid #bfbfbf;
+    border: 0.5px solid #bfbfbf;
     border-left: none;
     font-family: "CaskaydiaMono Nerd Font";
     font-size: 11.5px;
@@ -181,7 +181,7 @@ tooltip {
 #custom-analog-clock {
     /*background: #1e1e2e;*/
     background: transparent;
-    border: 1px solid #bfbfbf;
+    border: 0.5px solid #bfbfbf;
     border-right: none;
     font-family: "SimpleAnalogClockFont";
     font-size: 14px;
