--- a/style.css
+++ b/style.css
@@ -6,9 +6,6 @@
     color: #bfbfbf;
     border: none;
     border-radius: 0;
-    font-family: "CaskaydiaMono Nerd Font";
-    font-size: 12px;
-    font-weight: normal;
 }
 
 #waybar {
@@ -19,12 +16,19 @@
 /* ▓▓▓▓▓▓▓ LEFT MODULES ▓▓▓▓▓▓▓ */
 .modules-left {
     background: transparent;
-    padding: 0 8px;
+    padding: 0 1px 2px 8px;
 }
 #workspaces button {
     all: initial;
-    padding: 0 4px;
-    margin: 0 2px;
+    padding: 2 8px;
+    margin-top: 1;
+    margin-left: -1;
+
+    margin-right: 5;
+
+    font-family: "CaskaydiaMono Nerd Font";
+    font-size: 12px;
+
     border: 1px solid transparent;
     border-radius: 0px;
     transition: all 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -39,149 +43,168 @@
     opacity: 1;
     /* uncomment to have border*/
     /*border: 1px solid #bfbfbf;*/
-    padding: 0 6px;
+    padding: 0 10px;
     color: #bfbfbf;
     background: transparent;
 }
 
-#workspaces button.occupied:not(.active) {
-    opacity: 0;
+/*#workspaces button.occupied:not(.active) {
+    opacity: 1;
 
-    background: #1e1e2e;
-    color: #a6adc8;
+    background: #bfbfbf;
+    color: #bfbfbf;
     border: 0.5px solid rgba(0, 0, 0, 0.3);
-}
+}*/
 #workspaces button:hover {
-    border: 1px solid #737373;
+    border: 0.5px solid #737373;
     box-shadow: 0 0 4px rgba(85, 85, 85, 0.3);
     background: rgba(0, 0, 0, 0.2);
 }
 
 #workspaces button.empty {
-    opacity: 1;
+    opacity: 0.5;
     background: transparent;
     color: #a6adc8;
 }
 #custom-omarchy {
-    margin-right: 10px;
-    font-size: 14;
+    padding-top: 0px;
+    padding-bottom: 0px;
+
+    margin-top: 1px;
+    /*font-family: "Doto";
+    font-weight: 900;*/
+    font-size: 19px;
 }
 /* ▓▓▓▓▓▓▓ CENTER MODULES ▓▓▓▓▓▓▓ */
+
 /*.modules-center {
     background: transparent;
     padding: 0 8px;
 }*/
 
-/*#window {
-    background: #1e1e2e;
-    color: #f9e2af;
-    border: 1px solid #f9e2af;
-    padding: 2px 12px;
-    margin: 2px 4px;
-    font-size: 11px;
-}*/
+.modules-center {
+    margin-right: 95px;
+}
+
+#window {
+    background: transparent;
+    border: 0.3px solid #bfbfbf;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top: 1;
+
+    margin-bottom: 1;
+
+    font-family: "Doto";
+
+    font-size: 13px;
+    font-weight: 900;
+}
 
 /* ▓▓▓▓▓▓▓ RIGHT MODULES ▓▓▓▓▓▓▓ */
 .modules-right {
     background: transparent;
-    padding: 0 2px 0 8px;
+    padding: 0 1px 0 8px;
 }
-#bluetooth {
+/*#bluetooth {
     background: transparent;
     color: #bfbfbf;
-    border: 0.5px solid #bfbfbf;
+    border: 0.4px solid #bfbfbf;
     padding: 1px 6px;
     margin: 2px 1px;
     font-size: 10px;
-}
-#pulseaudio {
+}*/
+/*#pulseaudio {
     background: transparent;
     color: #bfbfbf;
-    border: 0.5px solid #bfbfbf;
+    border: 0.4px solid #bfbfbf;
     padding: 1px 6px;
     margin: 2px 2px;
     font-size: 10px;
-}
+    font-family: "Doto";
+    font-weight: 900;
+}*/
 
 #memory {
     background: transparent;
     color: #bfbfbf;
-    border: 0.5px solid #bfbfbf;
+    border: 0.4px solid #bfbfbf;
     padding: 1px 6px;
-    margin: 2px 2px;
-    font-size: 10px;
+    margin: 2px 3px;
+    font-size: 10;
+    font-family: "Doto";
+    font-weight: 900;
 }
-#cpu {
+/*#cpu {
     background: transparent;
     color: #bfbfbf;
-    border: 0.5px solid #bfbfbf;
+    border: 0.4px solid #bfbfbf;
     border-left: none;
     padding: 1px 6px;
     margin: 2px 0px;
-    font-size: 10px;
-}
-#temperature {
+ font-size: 10;    font-family: "Doto";
+    font-weight:900;
+}*/
+/*#temperature {
     background: transparent;
     color: #bfbfbf;
-    border: 0.5px solid #bfbfbf;
+    border: 0.4px solid #bfbfbf;
     padding: 1px 6px;
     margin: 2px 2px;
-    font-size: 10px;
-}
+ font-size: 10;    font-family: "Doto";
+    font-weight:900;
+}*/
 
 #battery {
     background: transparent;
     color: #bfbfbf;
-    border: 0.5px solid #bfbfbf;
+    border: 0.4px solid #bfbfbf;
     padding: 1px 6px;
-    margin: 2px 0px;
-    font-size: 10px;
+    margin: 2px 1px;
+    font-size: 10;
+    font-family: "Doto";
+    font-weight: 900;
 }
-#power-profiles-daemon {
+/*#power-profiles-daemon {
     background: transparent;
     color: #bfbfbf;
-    border: 0.5px solid #bfbfbf;
+    border: 0.4px solid #bfbfbf;
     border-right: none;
 
     padding: 1px 6px;
     margin: 2px 0px;
     font-size: 13.5px;
-}
+}*/
 #network {
     /*background: #1e1e2e;*/
     background: transparent;
     color: #bfbfbf;
-    border: 0.5px solid #bfbfbf;
+    border: 0.4px solid #bfbfbf;
     padding: 1px 6px;
-    margin: 2px 0px;
-    font-size: 10px;
+    font-family: "Doto";
+    font-weight: 900;
+    margin: 2px 1px;
+    font-size: 10;
 }
 
-/* ▓▓▓▓▓▓▓ TOOLTIPS ▓▓▓▓▓▓▓ */
-tooltip {
-    background: #1a1a1a;
-    border: 0.5px solid #bfbfbf;
-    border-radius: 0;
-    color: #bfbfbf;
-    font-family: "CaskaydiaMono Nerd Font";
-}
-
-/*▓▓▓▓▓▓▓ Extras ▓▓▓▓▓▓▓*/
 #clock {
     /*background: #1e1e2e;*/
     background: transparent;
-    border: 0.5px solid #bfbfbf;
+    border: 0.4px solid #bfbfbf;
     border-left: none;
-    font-family: "CaskaydiaMono Nerd Font";
-    font-size: 11.5px;
+    font-family: "Doto";
+    font-weight: 900;
+    font-size: 13px;
     padding: 1px 6px;
-    margin: 2px 0px 2px 0;
+    margin: 2px 1px 2px 0;
     color: #bfbfbf;
 }
 #custom-analog-clock {
     /*background: #1e1e2e;*/
     background: transparent;
-    border: 0.5px solid #bfbfbf;
+    border: 0.4px solid #bfbfbf;
     border-right: none;
     font-family: "SimpleAnalogClockFont";
     font-size: 14px;
@@ -191,11 +214,25 @@ tooltip {
     color: #bfbfbf;
 }
 
+/* ▓▓▓▓▓▓▓ TOOLTIPS ▓▓▓▓▓▓▓ */
+tooltip {
+    background: #303030;
+    border: 0.4px solid #bfbfbf;
+    border-radius: 0;
+    color: #bfbfbf;
+    font-size: 12px;
+    font-family: "Doto";
+    font-weight: 900;
+}
+
+/*▓▓▓▓▓▓▓ Extras ▓▓▓▓▓▓▓*/
+
 #tray {
     margin-right: 16px;
 }
 #custom-expand-icon {
     margin-right: 9px;
+    font-size: 12px;
 }
 #custom-update {
     font-size: 13px;
